fixed some overflow issues styles

--- a/assets/style/apps/books/cmp/books-list.cmp.css
+++ b/assets/style/apps/books/cmp/books-list.cmp.css
@@ -4,5 +4,6 @@
   grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
   grid-auto-rows: 250px;
   justify-items: center;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
