--- a/assets/style/apps/mail/cmp/email-details.cmp.css
+++ b/assets/style/apps/mail/cmp/email-details.cmp.css
@@ -39,7 +39,8 @@
 
 .email-details .email-content {
   flex: 2;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .email-details .email-content h2 {
